--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -8,6 +8,8 @@
 #home-intro {
   width: 100%;
   margin: auto;
+  display: flex;
+  justify-content: center;
 
   @media screen and (max-width: 768px) {
     width: 80%;
