--- a/src/pages/Project/Project.scss
+++ b/src/pages/Project/Project.scss
@@ -8,25 +8,27 @@
   }
 }
 
-.project-card {
-  border: 1px solid #e8e8e8;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.09);
-  cursor: pointer;
-  padding: 5px 10px;
-
-  &:hover {
-    border: 1px solid $main-color;
-    color: $main-color;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.09);
-  }
-}
-
-.project-list-wrapper {
+.project-wrapper > .project-list-wrapper {
   display: flex;
-  gap: 10px;
   flex-direction: column;
-  max-width: 80%;
-  margin: auto;
-  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  gap: 10px;
+
+  .project-card {
+    border: 1px solid #e8e8e8;
+    border-radius: 6px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.09);
+    cursor: pointer;
+    padding: 5px 20px;
+    width: 100%;
+    display: inline;
+
+    &:hover {
+      border: 1px solid $main-color;
+      color: $main-color;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.09);
+    }
+  }
 }
