--- a/src/views/ProjectDetailView/ProjectDetailView.scss
+++ b/src/views/ProjectDetailView/ProjectDetailView.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100%;
   width: 100%;
   max-width: 1200px;
@@ -42,9 +42,11 @@
     }
   }
 
-  @media screen and (max-width: 425px) {
-    &__content {
-      margin-top: 15%;
+  @media screen and (max-width: 768px) {
+    &__header {
+      position: fixed;
+      top: 2%;
+      left: 5%;
     }
   }
 }
@@ -52,19 +54,43 @@
 .project-detail-container > .images-wrapper {
 }
 
-.project-image-list {
+.gallery-wrapper {
   gap: 10px;
   margin-bottom: 20px;
 
-  img {
-    height: auto;
-    width: 10%;
-    object-fit: cover;
-  }
-  @media screen and (max-width: 768px) {
+  .images-list {
+    display: grid;
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+    grid-auto-flow: dense;
+    grid-template-columns: repeat(3, 1fr);
+
     img {
-      height: 50px;
-      width: 50px;
+      width: 100%;
+      height: 100%;
+      max-height: 300px;
+      object-fit: cover;
+      border-radius: 6px;
+      border: 1px solid #e8e8e8;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.09);
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.09);
+      }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .images-list {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  @media screen and (max-width: 425px) {
+    .images-list {
+      grid-template-columns: repeat(1, 1fr);
     }
   }
 }
